--- a/home.html
+++ b/home.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>UCLA Modern Dance Teams</title>
     <link rel="stylesheet" href="style.css">
+    <script defer src="js/script.js"></script>
   </head>
 
+  <body>
+    <img id="hero" src="assets/images/hero.jpg">
+  </body>
 </html>
