--- a/home.html
+++ b/home.html
@@ -8,6 +8,23 @@
   </head>
 
   <body>
-    <img id="hero" src="assets/images/hero.jpg">
+    <div id="home-box">
+      <div id="hero-box">
+        <img id="hero" src="assets/images/hero.jpg">
+        <div id="slogan"><b>Get engaged in one of the most vibrant dance communities in the world.</b></div>
+      </div>
+  
+      <div id="button-box">
+        <div class="genre">
+          <img class="button" src="assets/images/hiphop.JPG">
+          <div class="genre-label">Hiphop</div>
+        </div>
+        <div class="genre">
+          <img class="button" src="assets/images/kpop.jpg">
+          <div class="genre-label">Kpop</div>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
