--- a/home.html
+++ b/home.html
@@ -8,6 +8,14 @@
   </head>
 
   <body>
+    <nav id="nav">
+      <div id="logo">UCLA Modern Dance Teams</div>
+      <div id="menu">
+        <div id="hiphop">HIPHOP</div>
+        <div id="kpop">KPOP</div>
+      </div>
+    </nav>
+
     <div id="home-box">
       <div id="hero-box">
         <img id="hero" src="assets/images/hero.jpg">
