--- a/home.html
+++ b/home.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>UCLA Modern Dance Teams</title>
+    <link rel="stylesheet" href="textillate/assets/animate.css">
     <link rel="stylesheet" href="style.css">
-    <script defer src="js/script.js"></script>
   </head>
 
   <body>
@@ -19,7 +19,7 @@
     <div id="home-box">
       <div id="hero-box">
         <img id="hero" src="assets/images/hero.jpg">
-        <div id="slogan"><b>Get engaged in one of the most vibrant dance communities in the world.</b></div>
+        <h1 class="slogan">Get engaged in one of the most vibrant dance communities in the world.</h1>
       </div>
   
       <div id="button-box">
@@ -34,5 +34,9 @@
       </div>
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="textillate/assets/jquery.lettering.js"></script>
+    <script src="textillate/jquery.textillate.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
