--- a/kpop.html
+++ b/kpop.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>UCLA Kpop Teams</title>
+    <title>UCLA Modern Dance Teams</title>
     <link rel="stylesheet" href="style.css">
     <script defer src="js/script.js"></script>
   </head>
