--- a/kpop.html
+++ b/kpop.html
@@ -7,7 +7,14 @@
     <script defer src="js/script.js"></script>
   </head>
 
-  <body>
+  <body class="detail-body">
+    <nav class="detail-nav">
+      <div id="logo"><a href="home.html">UCLA Modern Dance Teams</a></div>
+      <div id="menu">
+        <div id="hiphop"><a href="hiphop.html">HIPHOP</a></div>
+        <div id="kpop" style="text-decoration: underline"><a href="kpop.html">KPOP</a></div>
+      </div>
+    </nav>
 
   </body>
 </html>
