--- a/home.html
+++ b/home.html
@@ -7,34 +7,36 @@
     <link rel="stylesheet" href="style.css">
   </head>
 
-  <body>
+  <body class="home-body">
     <nav id="nav">
-      <div id="logo">UCLA Modern Dance Teams</div>
+      <div id="logo"><a href="home.html">UCLA Modern Dance Teams</a></div>
       <div id="menu">
-        <div id="hiphop">HIPHOP</div>
-        <div id="kpop">KPOP</div>
+        <div id="hiphop"><a href="hiphop.html">HIPHOP</a></div>
+        <div id="kpop"><a href="kpop.html">KPOP</a></div>
       </div>
     </nav>
 
     <div id="home-box">
       <div id="hero-box">
-        <img id="hero" src="assets/images/hero.jpg">
+        <img id="hero" src="assets/images/hero.jpg" alt="A UCLA dance group performing modern dance on stage">
         <h1 class="slogan">Get engaged in one of the most vibrant dance communities in the world.</h1>
       </div>
   
       <div id="button-box">
         <div class="genre">
-          <img class="button" src="assets/images/hiphop.JPG">
+          <a href="hiphop.html"><img class="button" src="assets/images/hiphop.JPG" alt="A UCLA dance group performing Hiphop dance on stage"></a>
           <div class="genre-label">Hiphop</div>
         </div>
         <div class="genre">
-          <img class="button" src="assets/images/kpop.jpg">
+          <a href="kpop.html"><img class="button" src="assets/images/kpop.jpg" alt="A UCLA dance group performing Kpop dance on stage"></a>
           <div class="genre-label">Kpop</div>
         </div>
       </div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="textillate/assets/jquery.lettering.js"></script>
+    <script src="textillate/jquery.js"></script>
     <script src="textillate/assets/jquery.lettering.js"></script>
     <script src="textillate/jquery.textillate.js"></script>
     <script src="script.js"></script>
