--- a/hiphop.html
+++ b/hiphop.html
@@ -18,85 +18,160 @@
 
     <div id="body-box">
       <div class="row-box">
-        <div class="card-box">
-          <div class="image-box">
-            <img class="image" src="assets/images/foundations.jpeg">
+        <div class="row-flex">
+          <div class="card-box">
+            <div class="image-box">
+              <img class="image" src="assets/images/foundations.jpeg">
+            </div>
+  
+            <div class="label">
+              <span class="beginner">Beginner</span>
+              <span class="hour">12 hrs/week</span>
+            </div>
+  
+            <div class="name">
+              <b>Foundations</b>
+            </div>
+            <div class="description">
+              Foundations Choreography's mission is to create a safe space for beginning and intermediate dancers to grow, train, and challenge themselves. We offer training teams that create a performance set for our quarterly exhibition. In addition, we offer free weekly public workshops.
+            </div>
           </div>
-
-          <div class="label">
-            <span class="beginner">Beginner</span>
-            <span class="hour">12 hrs/week</span>
-          </div>
-
-          <div class="name">
-            <b>Foundations</b>
-          </div>
-          <div class="description">
-            Foundations Choreography's mission is to create a safe space for beginning and intermediate dancers to grow, train, and challenge themselves. We offer training teams that create a performance set for our quarterly exhibition. In addition, we offer free weekly public workshops.
-          </div>
-        </div>
-
-        <div class="card-box">
-          <div class="image-box">
-            <img class="image" src="assets/images/kasa.jpg">
-          </div>
-
-          <div class="label">
-            <span class="beginner">Beginner</span>
-            <span class="hour">15 hrs/week</span>
-          </div>
-
-          <div class="name">
-            <b>KASA Dance Off</b>
-          </div>
-          <div class="description">
-            Kasa Dance Off is a freshman dance competition across universities in California. All level of dancers are welcomed to join. The competition will be held at the end of each fall quarter.
-          </div>
-        </div>
-
-        <div class="card-box">
-          <div class="image-box">
-            <img class="image" src="assets/images/modernx.jpeg">
-          </div>
-
-          <div class="label">
-            <span class="intermediate">Intermediate</span>
-            <span class="hour">8 hrs/week</span>
-          </div>
-
-          <div class="name">
-            <b>ModernX</b>
-          </div>
-          <div class="description">
-            ModernX, formerly known as CSSA Modern, is established by a group of Chinese students with a shared passion for modern dance. Our purpose is to provide a community for Chinese students to pursue their passion in modern dance. We explore, grow and challenge ourselves in the choreography of modern dancing.
+  
+          <div class="card-box">
+            <div class="image-box">
+              <img class="image" src="assets/images/kasa.jpg">
+            </div>
+  
+            <div class="label">
+              <span class="beginner">Beginner</span>
+              <span class="hour">15 hrs/week</span>
+            </div>
+  
+            <div class="name">
+              <b>KASA Dance Off</b>
+            </div>
+            <div class="description">
+              Kasa Dance Off is a freshman dance competition across universities in California. All level of dancers are welcomed to join. The competition will be held at the end of each fall quarter.
+            </div>
           </div>
         </div>
 
-        <div class="card-box">
-          <div class="image-box">
-            <img class="image" src="assets/images/kcn.jpeg">
+        <div class="row-flex">
+          <div class="card-box">
+            <div class="image-box">
+              <img class="image" src="assets/images/modernx.jpeg">
+            </div>
+  
+            <div class="label">
+              <span class="intermediate">Intermediate</span>
+              <span class="hour">8 hrs/week</span>
+            </div>
+  
+            <div class="name">
+              <b>ModernX</b>
+            </div>
+            <div class="description">
+              ModernX, formerly known as CSSA Modern, is established by a group of Chinese students with a shared passion for modern dance. Our purpose is to provide a community for Chinese students to pursue their passion in modern dance. We explore, grow and challenge ourselves in the choreography of modern dancing.
+            </div>
           </div>
-
-          <div class="label">
-            <span class="intermediate">Intermediate</span>
-            <span class="hour">8 hrs/week</span>
-          </div>
-
-          <div class="name">
-            <b>KCN Modern</b>
-          </div>
-          <div class="description">
-            KCN Modern is a dance group that will perform at Korean Cultural Night every year. Dancers need to audition to get on the team and the dance style will be mainly hiphop. 
+  
+          <div class="card-box">
+            <div class="image-box">
+              <img class="image" src="assets/images/kcn.jpeg">
+            </div>
+  
+            <div class="label">
+              <span class="intermediate">Intermediate</span>
+              <span class="hour">8 hrs/week</span>
+            </div>
+  
+            <div class="name">
+              <b>KCN Modern</b>
+            </div>
+            <div class="description">
+              KCN Modern is a dance group that will perform at Korean Cultural Night every year. Dancers need to audition to get on the team and the dance style will be mainly hiphop. 
+            </div>
           </div>
         </div>
-
-
-
-
       </div>
+      
+      <div class="row-box">
+        <div class="row-flex">
+          <div class="card-box">
+            <div class="image-box">
+              <img class="image" src="assets/images/vsu.jpeg">
+            </div>
+  
+            <div class="label">
+              <span class="intermediate">Intermediate</span>
+              <span class="hour">12 hrs/week</span>
+            </div>
+  
+            <div class="name">
+              <b>VSA Modern</b>
+            </div>
+            <div class="description">
+              VSU Modern is a competitive dance team at UCLA established in 2006. As we enter our 17th year, Rho year, we strive to continue providing a welcoming and inclusive space for our members to grow as competitive and culturally educated dancers while continuously advancing our artistic ambitions as a dance team. 
+            </div>
+          </div>
+  
+          <div class="card-box">
+            <div class="image-box">
+              <img class="image" src="assets/images/nsu.jpeg">
+            </div>
+  
+            <div class="label">
+              <span class="intermediate">Intermediate</span>
+              <span class="hour">12 hrs/week</span>
+            </div>
+  
+            <div class="name">
+              <b>NSU Modern</b>
+            </div>
+            <div class="description">
+              NSU Modern is one of UCLA's premiere hip-hop dance teams and is home to some of the university's most versatile and talented dancers. Its members are proud to represent the Nikkei Student Union, UCLA's only Japanese American student association. Comprised of multi-ethnic Bruins from various dance backgrounds, NSU Modern strives to perform a variety of dance styles.
+            </div>
+          </div>
+        </div>
 
-
-
+        <div class="row-flex">
+          <div class="card-box">
+            <div class="image-box">
+              <img class="image" src="assets/images/modernx.jpeg">
+            </div>
+  
+            <div class="label">
+              <span class="advanced">Advanced</span>
+              <span class="hour">12 hrs/week</span>
+            </div>
+  
+            <div class="name">
+              <b>Samahang Modern</b>
+            </div>
+            <div class="description">
+              Samahang Modern is stablished in 1986 for the annual Samahang Pilipino Cultural Night. Samahang Modern is UCLA’s premiere competitive dance team. Composed of students balancing their academic goals with their creative passions, Samahang Modern is dedicated to dance, professionalism, family, and cultural roots. We cultivate a space to share a love for dance and each other and to welcome dancers into The Good Life each year.
+            </div>
+          </div>
+  
+          <div class="card-box">
+            <div class="image-box">
+              <img class="image" src="assets/images/kcn.jpeg">
+            </div>
+  
+            <div class="label">
+              <span class="advanced">Advanced</span>
+              <span class="hour">12 hrs/week</span>
+            </div>
+  
+            <div class="name">
+              <b>ACA Hiphop</b>
+            </div>
+            <div class="description">
+              ACA is a competitive dance team based at UCLA, composed of dancers who share a love for all styles of dance and performance. We are a family that values and encourages dedication, teamwork, and growth. 
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
