--- a/hiphop.html
+++ b/hiphop.html
@@ -108,7 +108,7 @@
             </div>
   
             <div class="name">
-              <b>VSA Modern</b>
+              <b>VSU Modern</b>
             </div>
             <div class="description">
               VSU Modern is a competitive dance team at UCLA established in 2006. As we enter our 17th year, Rho year, we strive to continue providing a welcoming and inclusive space for our members to grow as competitive and culturally educated dancers while continuously advancing our artistic ambitions as a dance team. 
@@ -137,7 +137,7 @@
         <div class="row-flex">
           <div class="card-box">
             <div class="image-box">
-              <img class="image" src="assets/images/modernx.jpeg">
+              <img class="image" src="assets/images/samahang.png">
             </div>
   
             <div class="label">
@@ -155,7 +155,7 @@
   
           <div class="card-box">
             <div class="image-box">
-              <img class="image" src="assets/images/kcn.jpeg">
+              <img class="image" src="assets/images/aca.jpeg">
             </div>
   
             <div class="label">
