--- a/kpop.html
+++ b/kpop.html
@@ -16,5 +16,84 @@
       </div>
     </nav>
 
+    <div id="body-box">
+      <div class="row-box">
+        <div class="row-flex">
+          <div class="card-box">
+            <div class="image-box">
+              <img class="image" src="assets/images/kbm.jpeg">
+            </div>
+  
+            <div class="label">
+              <span class="beginner">Beginner</span>
+              <span class="hour">12 hrs/week</span>
+            </div>
+  
+            <div class="name">
+              <b>Foundations</b>
+            </div>
+            <div class="description">
+              Foundations Choreography's mission is to create a safe space for beginning and intermediate dancers to grow, train, and challenge themselves. We offer training teams that create a performance set for our quarterly exhibition. In addition, we offer free weekly public workshops.
+            </div>
+          </div>
+  
+          <div class="card-box">
+            <div class="image-box">
+              <img class="image" src="assets/images/seoula.jpeg">
+            </div>
+  
+            <div class="label">
+              <span class="beginner">Beginner</span>
+              <span class="hour">15 hrs/week</span>
+            </div>
+  
+            <div class="name">
+              <b>KASA Dance Off</b>
+            </div>
+            <div class="description">
+              Kasa Dance Off is a freshman dance competition across universities in California. All level of dancers are welcomed to join. The competition will be held at the end of each fall quarter.
+            </div>
+          </div>
+        </div>
+
+        <div class="row-flex">
+          <div class="card-box">
+            <div class="image-box">
+              <img class="image" src="assets/images/koreos.jpeg">
+            </div>
+  
+            <div class="label">
+              <span class="intermediate">Intermediate</span>
+              <span class="hour">8 hrs/week</span>
+            </div>
+  
+            <div class="name">
+              <b>ModernX</b>
+            </div>
+            <div class="description">
+              ModernX, formerly known as CSSA Modern, is established by a group of Chinese students with a shared passion for modern dance. Our purpose is to provide a community for Chinese students to pursue their passion in modern dance. We explore, grow and challenge ourselves in the choreography of modern dancing.
+            </div>
+          </div>
+  
+          <div class="card-box">
+            <div class="image-box">
+              <img class="image" src="assets/images/">
+            </div>
+  
+            <div class="label">
+              <span class="intermediate">Intermediate</span>
+              <span class="hour">8 hrs/week</span>
+            </div>
+  
+            <div class="name">
+              <b>KCN Modern</b>
+            </div>
+            <div class="description">
+              KCN Modern is a dance group that will perform at Korean Cultural Night every year. Dancers need to audition to get on the team and the dance style will be mainly hiphop. 
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
