--- a/hiphop.html
+++ b/hiphop.html
@@ -21,7 +21,7 @@
         <div class="row-flex">
           <div class="card-box">
             <div class="image-box">
-              <img class="image" src="assets/images/foundations.jpeg">
+              <img class="image" src="assets/images/foundations.jpeg" alt="Foundations Choreography Logo">
             </div>
   
             <div class="label">
@@ -35,11 +35,14 @@
             <div class="description">
               Foundations Choreography's mission is to create a safe space for beginning and intermediate dancers to grow, train, and challenge themselves. We offer training teams that create a performance set for our quarterly exhibition. In addition, we offer free weekly public workshops.
             </div>
+            <div class="ig">
+              <a href="https://www.instagram.com/foundationschoreo/" target="_blank"><img class="ig-logo" src="assets/images/ig.jpg" alt="Instagram logo"></a>
+            </div>
           </div>
   
           <div class="card-box">
             <div class="image-box">
-              <img class="image" src="assets/images/kasa.jpg">
+              <img class="image" src="assets/images/kasa.jpg" alt="KASA Dance Off Logo">
             </div>
   
             <div class="label">
@@ -53,13 +56,16 @@
             <div class="description">
               Kasa Dance Off is a freshman dance competition across universities in California. All level of dancers are welcomed to join. The competition will be held at the end of each fall quarter.
             </div>
+            <div class="ig">
+              <a href="https://www.instagram.com/uclakasa/" target="_blank"><img class="ig-logo" src="assets/images/ig.jpg" alt="Instagram logo"></a>
+            </div>
           </div>
         </div>
 
         <div class="row-flex">
           <div class="card-box">
             <div class="image-box">
-              <img class="image" src="assets/images/modernx.jpeg">
+              <img class="image" src="assets/images/modernx.jpeg" alt="ModernX Logo">
             </div>
   
             <div class="label">
@@ -73,11 +79,14 @@
             <div class="description">
               ModernX, formerly known as CSSA Modern, is established by a group of Chinese students with a shared passion for modern dance. Our purpose is to provide a community for Chinese students to pursue their passion in modern dance. We explore, grow and challenge ourselves in the choreography of modern dancing.
             </div>
+            <div class="ig">
+              <a href="https://www.instagram.com/modernx_official" target="_blank"><img class="ig-logo" src="assets/images/ig.jpg" alt="Instagram logo"></a>
+            </div>
           </div>
   
           <div class="card-box">
             <div class="image-box">
-              <img class="image" src="assets/images/kcn.jpeg">
+              <img class="image" src="assets/images/kcn.jpeg" alt="KCN Modern Logo">
             </div>
   
             <div class="label">
@@ -99,7 +108,7 @@
         <div class="row-flex">
           <div class="card-box">
             <div class="image-box">
-              <img class="image" src="assets/images/vsu.jpeg">
+              <img class="image" src="assets/images/vsu.jpeg" alt="VSU Modern Logo">
             </div>
   
             <div class="label">
@@ -117,7 +126,7 @@
   
           <div class="card-box">
             <div class="image-box">
-              <img class="image" src="assets/images/nsu.jpeg">
+              <img class="image" src="assets/images/nsu.jpeg" alt="NSU Modern Logo">
             </div>
   
             <div class="label">
@@ -137,7 +146,7 @@
         <div class="row-flex">
           <div class="card-box">
             <div class="image-box">
-              <img class="image" src="assets/images/samahang.png">
+              <img class="image" src="assets/images/samahang.png" alt="Samahang Modern Logo">
             </div>
   
             <div class="label">
@@ -155,7 +164,7 @@
   
           <div class="card-box">
             <div class="image-box">
-              <img class="image" src="assets/images/aca.jpeg">
+              <img class="image" src="assets/images/aca.jpeg" alt="ACA Hiphop Logo">
             </div>
   
             <div class="label">
