--- a/kpop.html
+++ b/kpop.html
@@ -28,12 +28,15 @@
               <span class="beginner">Beginner</span>
               <span class="hour">12 hrs/week</span>
             </div>
-  
+
             <div class="name">
               <b>Foundations</b>
             </div>
             <div class="description">
               Foundations Choreography's mission is to create a safe space for beginning and intermediate dancers to grow, train, and challenge themselves. We offer training teams that create a performance set for our quarterly exhibition. In addition, we offer free weekly public workshops.
+            </div>
+            <div class="ig">
+              <img class="ig-logo" src="assets/images/ig.jpg">
             </div>
           </div>
   
