--- a/kpop.html
+++ b/kpop.html
@@ -21,40 +21,43 @@
         <div class="row-flex">
           <div class="card-box">
             <div class="image-box">
-              <img class="image" src="assets/images/kbm.jpeg">
+              <img class="image" src="assets/images/kbm.jpeg" alt="KBM Dance Logo">
             </div>
   
             <div class="label">
               <span class="beginner">Beginner</span>
-              <span class="hour">12 hrs/week</span>
+              <span class="hour">3 hrs/week</span>
             </div>
 
             <div class="name">
-              <b>Foundations</b>
+              <b>KBM Dance</b>
             </div>
             <div class="description">
-              Foundations Choreography's mission is to create a safe space for beginning and intermediate dancers to grow, train, and challenge themselves. We offer training teams that create a performance set for our quarterly exhibition. In addition, we offer free weekly public workshops.
+              KBM Dance, officially launched in September 2016, is a UCLA-based K-pop cover dance team under KINSA (K-pop International Student Association) who wish to bond, spread happiness and our love for K-pop through our dance covers on YouTube.
             </div>
             <div class="ig">
-              <img class="ig-logo" src="assets/images/ig.jpg">
+              <a href="https://www.instagram.com/kbmdanceucla/" target="_blank"><img class="ig-logo" src="assets/images/ig.jpg" alt="Instagram logo"></a>
             </div>
           </div>
   
           <div class="card-box">
             <div class="image-box">
-              <img class="image" src="assets/images/seoula.jpeg">
+              <img class="image" src="assets/images/seoula.jpeg" alt="SEOULA Logo">
             </div>
   
             <div class="label">
-              <span class="beginner">Beginner</span>
-              <span class="hour">15 hrs/week</span>
+              <span class="intermediate">Intermediate</span>
+              <span class="hour">5 hrs/week</span>
             </div>
   
             <div class="name">
-              <b>KASA Dance Off</b>
+              <b>SEOULA</b>
             </div>
             <div class="description">
-              Kasa Dance Off is a freshman dance competition across universities in California. All level of dancers are welcomed to join. The competition will be held at the end of each fall quarter.
+              SEOULA is a K-POP/original choreography dance team, started in January of 2017, with a diverse group of dancers who all share a passion for Korean pop culture. We hope to showcase their talents and skills through different performances in and out of UCLA to spread the love of dance and the Korean culture to the world! 
+            </div>
+            <div class="ig">
+              <a href="https://www.instagram.com/seoulaofficial/" target="_blank"><img class="ig-logo" src="assets/images/ig.jpg" alt="Instagram logo"></a>
             </div>
           </div>
         </div>
@@ -62,37 +65,43 @@
         <div class="row-flex">
           <div class="card-box">
             <div class="image-box">
-              <img class="image" src="assets/images/koreos.jpeg">
+              <img class="image" src="assets/images/koreos.jpeg" alt="KOREOS Logo">
             </div>
   
             <div class="label">
               <span class="intermediate">Intermediate</span>
-              <span class="hour">8 hrs/week</span>
+              <span class="hour">5 hrs/week</span>
             </div>
   
             <div class="name">
-              <b>ModernX</b>
+              <b>KOREOS</b>
             </div>
             <div class="description">
-              ModernX, formerly known as CSSA Modern, is established by a group of Chinese students with a shared passion for modern dance. Our purpose is to provide a community for Chinese students to pursue their passion in modern dance. We explore, grow and challenge ourselves in the choreography of modern dancing.
+              Beginning production in December 2014, Koreos is a UCLA-based K-Pop dance cover team made up of members who each bring their own diverse and unique flavors. Koreos values teamwork, growth, and professionalism to create dance covers, participate in competitions, and connect with the broader K-Pop community.
+            </div>
+            <div class="ig">
+              <a href="https://www.instagram.com/koreosucla/" target="_blank"><img class="ig-logo" src="assets/images/ig.jpg" alt="Instagram logo"></a>
             </div>
           </div>
   
           <div class="card-box">
             <div class="image-box">
-              <img class="image" src="assets/images/">
+              <img class="image" src="assets/images/playground.jpg" alt="Playground Logo">
             </div>
   
             <div class="label">
               <span class="intermediate">Intermediate</span>
-              <span class="hour">8 hrs/week</span>
+              <span class="hour">5 hrs/week</span>
             </div>
   
             <div class="name">
-              <b>KCN Modern</b>
+              <b>PLAYGROUND</b>
             </div>
             <div class="description">
-              KCN Modern is a dance group that will perform at Korean Cultural Night every year. Dancers need to audition to get on the team and the dance style will be mainly hiphop. 
+              We're just here to have fun! PLAYGROUND is a space where friends come together to have fun and share their love for dance. We have an emphasis for PLAYGROUND to be stress-free and a place for happiness where creativity can be sparked. Let's all have fun at PLAYGROUND! 
+            </div>
+            <div class="ig">
+              <a href="https://www.instagram.com/official_playground/" target="_blank"><img class="ig-logo" src="assets/images/ig.jpg" alt="Instagram logo"></a>
             </div>
           </div>
         </div>
