--- a/hiphop.html
+++ b/hiphop.html
@@ -30,7 +30,7 @@
             </div>
   
             <div class="name">
-              <b>Foundations</b>
+              <b>Foundations Choreography</b>
             </div>
             <div class="description">
               Foundations Choreography's mission is to create a safe space for beginning and intermediate dancers to grow, train, and challenge themselves. We offer training teams that create a performance set for our quarterly exhibition. In addition, we offer free weekly public workshops.
@@ -100,6 +100,9 @@
             <div class="description">
               KCN Modern is a dance group that will perform at Korean Cultural Night every year. Dancers need to audition to get on the team and the dance style will be mainly hiphop. 
             </div>
+            <div class="ig">
+              <a href="https://www.instagram.com/uclakcn/" target="_blank"><img class="ig-logo" src="assets/images/ig.jpg" alt="Instagram logo"></a>
+            </div>
           </div>
         </div>
       </div>
@@ -122,6 +125,9 @@
             <div class="description">
               VSU Modern is a competitive dance team at UCLA established in 2006. As we enter our 17th year, Rho year, we strive to continue providing a welcoming and inclusive space for our members to grow as competitive and culturally educated dancers while continuously advancing our artistic ambitions as a dance team. 
             </div>
+            <div class="ig">
+              <a href="https://www.instagram.com/vsumodern/" target="_blank"><img class="ig-logo" src="assets/images/ig.jpg" alt="Instagram logo"></a>
+            </div>
           </div>
   
           <div class="card-box">
@@ -139,6 +145,9 @@
             </div>
             <div class="description">
               NSU Modern is one of UCLA's premiere hip-hop dance teams and is home to some of the university's most versatile and talented dancers. Its members are proud to represent the Nikkei Student Union, UCLA's only Japanese American student association. Comprised of multi-ethnic Bruins from various dance backgrounds, NSU Modern strives to perform a variety of dance styles.
+            </div>
+            <div class="ig">
+              <a href="https://www.instagram.com/nsumodern/" target="_blank"><img class="ig-logo" src="assets/images/ig.jpg" alt="Instagram logo"></a>
             </div>
           </div>
         </div>
@@ -160,6 +169,9 @@
             <div class="description">
               Samahang Modern is stablished in 1986 for the annual Samahang Pilipino Cultural Night. Samahang Modern is UCLA’s premiere competitive dance team. Composed of students balancing their academic goals with their creative passions, Samahang Modern is dedicated to dance, professionalism, family, and cultural roots. We cultivate a space to share a love for dance and each other and to welcome dancers into The Good Life each year.
             </div>
+            <div class="ig">
+              <a href="https://www.instagram.com/samahangmodern/" target="_blank"><img class="ig-logo" src="assets/images/ig.jpg" alt="Instagram logo"></a>
+            </div>
           </div>
   
           <div class="card-box">
@@ -177,6 +189,9 @@
             </div>
             <div class="description">
               ACA is a competitive dance team based at UCLA, composed of dancers who share a love for all styles of dance and performance. We are a family that values and encourages dedication, teamwork, and growth. 
+            </div>
+            <div class="ig">
+              <a href="https://www.instagram.com/acaallday/" target="_blank"><img class="ig-logo" src="assets/images/ig.jpg" alt="Instagram logo"></a>
             </div>
           </div>
         </div>
