--- a/kpop.html
+++ b/kpop.html
@@ -21,7 +21,7 @@
         <div class="row-flex">
           <div class="card-box">
             <div class="image-box">
-              <img class="image" src="assets/images/kbm.jpeg" alt="KBM Dance Logo">
+              <img class="image" id="kbm" src="assets/images/kbm.jpeg" alt="KBM Dance Logo">
             </div>
   
             <div class="label">
@@ -42,7 +42,7 @@
   
           <div class="card-box">
             <div class="image-box">
-              <img class="image" src="assets/images/seoula.jpeg" alt="SEOULA Logo">
+              <img class="image" id="seoula" src="assets/images/seoula.jpeg" alt="SEOULA Logo">
             </div>
   
             <div class="label">
@@ -65,7 +65,7 @@
         <div class="row-flex">
           <div class="card-box">
             <div class="image-box">
-              <img class="image" src="assets/images/koreos.jpeg" alt="KOREOS Logo">
+              <img class="image" id="koreos" src="assets/images/koreos.jpeg" alt="KOREOS Logo">
             </div>
   
             <div class="label">
@@ -86,7 +86,7 @@
   
           <div class="card-box">
             <div class="image-box">
-              <img class="image" src="assets/images/playground.jpg" alt="Playground Logo">
+              <img class="image" id="playground" src="assets/images/playground.jpg" alt="Playground Logo">
             </div>
   
             <div class="label">
