--- a/hiphop.html
+++ b/hiphop.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>UCLA Modern Dance Teams</title>
     <link rel="stylesheet" href="style.css">
-    <script defer src="js/script.js"></script>
+    <script defer src="script.js"></script>
   </head>
 
   <body class="detail-body">
