--- a/hiphop.html
+++ b/hiphop.html
@@ -21,7 +21,7 @@
         <div class="row-flex">
           <div class="card-box">
             <div class="image-box">
-              <img class="image" id="foundations" src="assets/images/foundations.jpeg" alt="Foundations Choreography Logo">
+              <a href="https://www.youtube.com/c/FoundationsChoreography" target="_blank"><img class="image" id="foundations" src="assets/images/foundations.jpeg" alt="Foundations Choreography Logo"></a>
             </div>
   
             <div class="label">
@@ -42,7 +42,7 @@
   
           <div class="card-box">
             <div class="image-box">
-              <img class="image" id="kasa" src="assets/images/kasa.jpg" alt="KASA Dance Off Logo">
+              <a href="https://www.youtube.com/channel/UC_mDZMcqZkKmZZNbdbTWzQA" target="_blank"><img class="image" id="kasa" src="assets/images/kasa.jpg" alt="KASA Dance Off Logo"></a>
             </div>
   
             <div class="label">
@@ -65,7 +65,7 @@
         <div class="row-flex">
           <div class="card-box">
             <div class="image-box">
-              <img class="image" id="modernx" src="assets/images/modernx.jpeg" alt="ModernX Logo">
+              <a href="https://www.youtube.com/channel/UCB9BrzoqaHIm_H0ug1yydFQ" target="_blank"><img class="image" id="modernx" src="assets/images/modernx.jpeg" alt="ModernX Logo"></a>
             </div>
   
             <div class="label">
@@ -86,7 +86,7 @@
   
           <div class="card-box">
             <div class="image-box">
-              <img class="image" id="kcn" src="assets/images/kcn.jpeg" alt="KCN Modern Logo">
+              <a href="https://www.youtube.com/channel/UC-lEwlg3Fmkqy4taUOGWBNg" target="_blank"><img class="image" id="kcn" src="assets/images/kcn.jpeg" alt="KCN Modern Logo"></a>
             </div>
   
             <div class="label">
@@ -111,7 +111,7 @@
         <div class="row-flex">
           <div class="card-box">
             <div class="image-box">
-              <img class="image" id="vsu" src="assets/images/vsu.jpeg" alt="VSU Modern Logo">
+              <a href="https://www.youtube.com/user/vsumodern" target="_blank"><img class="image" id="vsu" src="assets/images/vsu.jpeg" alt="VSU Modern Logo"></a>
             </div>
   
             <div class="label">
@@ -132,7 +132,7 @@
   
           <div class="card-box">
             <div class="image-box">
-              <img class="image" id="nsu" src="assets/images/nsu.jpeg" alt="NSU Modern Logo">
+              <a href="https://www.youtube.com/c/NSUModern" target="_blank"><img class="image" id="nsu" src="assets/images/nsu.jpeg" alt="NSU Modern Logo"></a>
             </div>
   
             <div class="label">
@@ -155,7 +155,7 @@
         <div class="row-flex">
           <div class="card-box">
             <div class="image-box">
-              <img class="image" id="samahang" src="assets/images/samahang.png" alt="Samahang Modern Logo">
+              <a href="https://www.youtube.com/user/samahangmodernvids" target="_blank"><img class="image" id="samahang" src="assets/images/samahang.png" alt="Samahang Modern Logo"></a>
             </div>
   
             <div class="label">
@@ -176,7 +176,7 @@
   
           <div class="card-box">
             <div class="image-box">
-              <img class="image" id="aca" src="assets/images/aca.jpeg" alt="ACA Hiphop Logo">
+              <a href="https://www.youtube.com/c/acahiphop" target="_blank"><img class="image" id="aca" src="assets/images/aca.jpeg" alt="ACA Hiphop Logo"></a>
             </div>
   
             <div class="label">
