--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body class="home-body">
     <nav id="nav">
-      <div id="logo"><a href="home.html">UCLA Modern Dance Teams</a></div>
+      <div id="logo"><a href="index.html">UCLA Modern Dance Teams</a></div>
       <div id="menu">
         <div id="hiphop"><a href="hiphop.html">HIPHOP</a></div>
         <div id="kpop"><a href="kpop.html">KPOP</a></div>
