--- a/index.html
+++ b/index.html
@@ -1,44 +1,14 @@
+
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>UCLA Modern Dance Teams</title>
-    <link rel="stylesheet" href="textillate/assets/animate.css">
-    <link rel="stylesheet" href="style.css">
-  </head>
-
-  <body class="home-body">
-    <nav id="nav">
-      <div id="logo"><a href="index.html">UCLA Modern Dance Teams</a></div>
-      <div id="menu">
-        <div id="hiphop"><a href="hiphop.html">HIPHOP</a></div>
-        <div id="kpop"><a href="kpop.html">KPOP</a></div>
-      </div>
-    </nav>
-
-    <div id="home-box">
-      <div id="hero-box">
-        <img id="hero" src="assets/images/hero.jpg" alt="A UCLA dance group performing modern dance on stage">
-        <h1 class="slogan">Get engaged in one of the most vibrant dance communities in the world.</h1>
-      </div>
+  <meta charset="UTF-8">
+  <title>Final Project</title>
   
-      <div id="button-box">
-        <div class="genre">
-          <a href="hiphop.html"><img class="button" src="assets/images/hiphop.JPG" alt="A UCLA dance group performing Hiphop dance on stage"></a>
-          <div class="genre-label">Hiphop</div>
-        </div>
-        <div class="genre">
-          <a href="kpop.html"><img class="button" src="assets/images/kpop.jpg" alt="A UCLA dance group performing Kpop dance on stage"></a>
-          <div class="genre-label">Kpop</div>
-        </div>
-      </div>
-    </div>
+  <body>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="textillate/assets/jquery.lettering.js"></script>
-    <script src="textillate/jquery.js"></script>
-    <script src="textillate/assets/jquery.lettering.js"></script>
-    <script src="textillate/jquery.textillate.js"></script>
-    <script src="script.js"></script>
+    <ul>
+      <li><a href="final project/">Final Project</a></li>
+    </ul>
+
   </body>
 </html>
