--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
 
     <ul>
-      <li><a href="final project/">Final Project</a></li>
+      <li><a href="final-project/">Final Project</a></li>
     </ul>
 
   </body>
