--- a/final-project/hiphop.html
+++ b/final-project/hiphop.html
@@ -3,8 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>UCLA Modern Dance Teams</title>
-    <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body class="detail-body">
