--- a/final-project/index.html
+++ b/final-project/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>UCLA Modern Dance Teams</title>
     <link rel="stylesheet" href="textillate/assets/animate.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body class="home-body">
@@ -39,6 +39,6 @@
     <script src="textillate/jquery.js"></script>
     <script src="textillate/assets/jquery.lettering.js"></script>
     <script src="textillate/jquery.textillate.js"></script>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
